--- a/.github/workflows/speech-train-data-ci-cd.yml
+++ b/.github/workflows/speech-train-data-ci-cd.yml
@@ -155,11 +155,13 @@ jobs:
             exit 1
           fi
 
-      # https://github.com/msimecek/Azure-Speech-CLI
-      - name: Install and configure Azure Speech CLI
+      # https://github.com/Azure-Samples/cognitive-services-speech-tools
+      - name: Install and configure SPX
         run: |
-          dotnet tool install -g azurespeechcli --version 1.5.2
-          speech config set -n ${{ secrets.SPEECH_PROJECT_NAME }} -k ${{ secrets.SPEECH_SUBSCRIPTION_KEY }} -r ${{ secrets.SPEECH_RESOURCE_REGION }} -s
+          dotnet tool install -g spx
+          spx config @name --set ${{ secrets.SPEECH_PROJECT_NAME }} 
+          spx config @key --set ${{ secrets.SPEECH_SUBSCRIPTION_KEY }} 
+          spx config @region --set ${{ secrets.SPEECH_RESOURCE_REGION }}
 
       #########################################################################
       # Upload training data and create the Custom Speech model.
@@ -174,10 +176,8 @@ jobs:
       - name: Upload audio and human transcript training data
         if: env.TRAIN_ZIP_SOURCE_PATH && env.TRAIN_ZIP_SOURCE_PATH != ''
         run: |
-          unzip ${{ env.TRAIN_ZIP_SOURCE_PATH }} -d ${{ env.TRAIN_BUILD_FOLDER_PATH }}
-          zip -r ${{ env.TRAIN_BUILD_FOLDER_PATH }}/${{ env.TRAIN_AUDIO_ZIP_FILE }} ${{ env.TRAIN_BUILD_FOLDER_PATH }} -x "*.txt"
-          speech dataset create -n audio_trans_train_${{ env.CURRENT_COMMIT_HASH }} -a ${{ env.TRAIN_BUILD_FOLDER_PATH }}/${{ env.TRAIN_AUDIO_ZIP_FILE }} -t ${{ env.TRAIN_BUILD_FOLDER_PATH }}/${{ env.TRAIN_TRANS_FILE }} --wait > ${{ env.TRAIN_BUILD_FOLDER_PATH }}/audio-trans-train-upload.txt
-          audio_trans_train_id=$(cat ${{ env.TRAIN_BUILD_FOLDER_PATH }}/audio-trans-train-upload.txt | sed -n '3p')
+          spx csr dataset upload --data ${{ env.TRAIN_ZIP_SOURCE_PATH }} --kind Acoustic --name "AM" --output add url @my.training.datasets --wait
+          audio_trans_train_id=$(cat my.training.datasets | tail -c 36)
           if ! [[ ${audio_trans_train_id//-/} =~ ^[[:xdigit:]]{32}$ ]]
           then
             echo "::error ::Failed to upload audio and human-labeled transcript training data. Check that the correct paths are defined in environment variables or re-run all jobs."
@@ -194,8 +194,8 @@ jobs:
       - name: Upload pronunciation data
         if: env.PRONUNCIATION_FILE_PATH && env.PRONUNCIATION_FILE_PATH != ''
         run: |
-          speech dataset create -n pronunciation_${{ env.CURRENT_COMMIT_HASH }} -pro ${{ env.PRONUNCIATION_FILE_PATH }} --wait > ${{ env.TRAIN_BUILD_FOLDER_PATH }}/pronunciation-upload.txt
-          pronunciation_id=$(cat ${{ env.TRAIN_BUILD_FOLDER_PATH }}/pronunciation-upload.txt | sed -n '3p' )
+          spx csr dataset upload --data ${{ env.PRONUNCIATION_FILE_PATH }} --kind Pronunciation --name pronunciation_${{ env.CURRENT_COMMIT_HASH }} --output add url @my.training.datasets --wait
+          pronunciation_id=$(tail -1 my.training.datasets | tail -c 36)
           if ! [[ ${pronunciation_id//-/} =~ ^[[:xdigit:]]{32}$ ]]
           then
             echo "::error ::Failed to upload pronunciation data. Check that the correct paths are defined in environment variables or re-run all jobs."
@@ -212,8 +212,8 @@ jobs:
       - name: Upload language data
         if: env.RELATED_TEXT_FILE_PATH && env.RELATED_TEXT_FILE_PATH != ''
         run: |
-          speech dataset create -n language_${{ env.CURRENT_COMMIT_HASH }} -lng ${{ env.RELATED_TEXT_FILE_PATH }} --wait > ${{ env.TRAIN_BUILD_FOLDER_PATH }}/language-upload.txt
-          language_id=$(cat ${{ env.TRAIN_BUILD_FOLDER_PATH }}/language-upload.txt | sed -n '3p')
+          spx csr dataset upload --data ${{ env.RELATED_TEXT_FILE_PATH }} --kind Language --name language_${{ env.CURRENT_COMMIT_HASH }} --output add url @my.training.datasets --wait
+          language_id=$(tail -1 my.training.datasets | tail -c 36)
           if ! [[ ${language_id//-/} =~ ^[[:xdigit:]]{32}$ ]]
           then
             echo "::error ::Failed to upload language data. Check that the correct paths are defined in environment variables or re-run all jobs."
@@ -230,8 +230,10 @@ jobs:
       # the variable is a valid GUID with 32 hexadecimal characters.
       - name: Get latest baseline model
         run: |
-          speech model list-scenarios --locale ${{ env.SPEECH_LOCALE }} --simple > ${{ env.TRAIN_BUILD_FOLDER_PATH }}/base-models.txt
-          base_model_id=$(head -n 1 ${{ env.TRAIN_BUILD_FOLDER_PATH }}/base-models.txt)
+          spx csr model list --base --models --output json base_models.json
+          jq '.values[] | select(.locale==env.SPEECH_LOCALE).self' base_models.json | tr -d \" > base_models.txt
+          rm base_models.json
+          base_model_id=$(tail -1 base_models.txt | tr -d '[:space:]' | tail -c 36)
           if ! [[ ${base_model_id//-/} =~ ^[[:xdigit:]]{32}$ ]]
           then
             echo "::error ::Failed to get the latest baseline model. Possibly re-run all jobs."
@@ -246,8 +248,8 @@ jobs:
       # the variable is a valid GUID with 32 hexadecimal characters.
       - name: Create Custom Speech model with training data
         run: |
-          speech model create -l ${{ env.SPEECH_LOCALE }} ${{ env.CUSTOM_SPEECH_MODEL_DATA }} -s ${{ env.BASE_MODEL_ID }} -n custom_speech_model_${{ env.CURRENT_COMMIT_HASH }} --wait > ${{ env.TRAIN_BUILD_FOLDER_PATH }}/model-creation-output.txt
-          custom_speech_model_id=$(cat ${{ env.TRAIN_BUILD_FOLDER_PATH }}/model-creation-output.txt | sed -n '3p')
+          spx csr model create --name custom_speech_model_${{ env.CURRENT_COMMIT_HASH }} --datasets @my.training.datasets --output url @my.model.url --wait
+          custom_speech_model_id=$(cat my.model.url | tail -c 36)
           if ! [[ ${custom_speech_model_id//-/} =~ ^[[:xdigit:]]{32}$ ]]
           then
             echo "::error ::Failed to create a Custom Speech model. Possibly re-run all jobs."
@@ -261,24 +263,9 @@ jobs:
       # the variable is a valid GUID with 32 hexadecimal characters.
       - name: Delete training datasets
         run: |
-          audio_trans_train_id=${{ env.AUDIO_TRANS_TRAIN_ID }}
-          if [[ ${audio_trans_train_id//-/} =~ ^[[:xdigit:]]{32}$ ]]
-          then
-            speech dataset delete ${{ env.AUDIO_TRANS_TRAIN_ID }}
-            echo DELETED AUDIO+HUMAN-LABELED TRANSCRIPT TRAINING DATA.
-          fi
-          pronunciation_id=${{ env.PRONUNCIATION_ID }}
-          if [[ ${pronunciation_id//-/} =~ ^[[:xdigit:]]{32}$ ]]
-          then
-            speech dataset delete ${{ env.PRONUNCIATION_ID }}
-            echo DELETED PRONUNCIATION DATA.
-          fi
-          language_id=${{ env.LANGUAGE_ID }}
-          if [[ ${language_id//-/} =~ ^[[:xdigit:]]{32}$ ]]
-          then
-            speech dataset delete ${{ env.LANGUAGE_ID }}
-            echo DELETED LANGUAGE DATA.
-          fi
+          spx csr dataset delete --foreach ds in @my.training.datasets
+          rm my.training.datasets
+          echo DELETED TRAINING DATASETS.
 
       #########################################################################
       # Test the Custom Speech model.
@@ -294,17 +281,13 @@ jobs:
       # the variable is a valid GUID with 32 hexadecimal characters.
       - name: Upload audio and human transcript testing data
         run: |
-          audio_trans_test_id=''
           if [git diff --name-only env.TEST_ZIP_SOURCE_PATH | grep -w 'env.TEST_ZIP_SOURCE_PATH']
           then
-            speech dataset list > ${{ env.TEST_BUILD_FOLDER_PATH }}/audio-dataset-list.txt
-            audio_trans_test_id=$(cat ${{ env.TEST_BUILD_FOLDER_PATH }}/audio-trans-test-upload.txt | sed -n '3p')
+            spx csr dataset list --output url @my.testing.datasets
           else
-            unzip ${{ env.TEST_ZIP_SOURCE_PATH }} -d ${{ env.TEST_BUILD_FOLDER_PATH }}
-            zip -r ${{ env.TEST_BUILD_FOLDER_PATH }}/${{ env.TEST_AUDIO_ZIP_FILE }} ${{ env.TEST_BUILD_FOLDER_PATH }} -x "*.txt"
-            speech dataset create -n audio_trans_test_${{ env.CURRENT_COMMIT_HASH }} -a ${{ env.TEST_BUILD_FOLDER_PATH }}/${{ env.TEST_AUDIO_ZIP_FILE }} -t ${{ env.TEST_BUILD_FOLDER_PATH }}/${{ env.TEST_TRANS_FILE }} --wait > ${{ env.TEST_BUILD_FOLDER_PATH }}/audio-trans-test-upload.txt
-            audio_trans_test_id=$(cat ${{ env.TEST_BUILD_FOLDER_PATH }}/audio-trans-test-upload.txt | sed -n '3p')
+            spx csr dataset upload --name audio_trans_test_${{ env.CURRENT_COMMIT_HASH }} --kind Acoustic --data ${{ env.TEST_ZIP_SOURCE_PATH }} --output url @my.testing.datasets --wait 
           fi
+          audio_trans_test_id=$(tail -1 my.testing.datasets | tail -c 36)
           if ! [[ ${audio_trans_test_id//-/} =~ ^[[:xdigit:]]{32}$ ]]
           then
             echo "::error ::Failed to upload audio and human-labeled transcript testing data. Check that the correct paths are defined in environment variables or re-run all jobs."
@@ -319,8 +302,9 @@ jobs:
       # the variable is a valid GUID with 32 hexadecimal characters.
       - name: Test the new Speech model
         run: |
-          speech test create -n test_from_train_data_update_${{ env.CURRENT_COMMIT_HASH }} -a ${{ env.AUDIO_TRANS_TEST_ID }} -m ${{ env.CUSTOM_SPEECH_MODEL_ID }} -lm ${{ env.CUSTOM_SPEECH_MODEL_ID }} --wait > ${{ env.TEST_BUILD_FOLDER_PATH }}/test-output.txt
-          test_id=$(cat ${{ env.TEST_BUILD_FOLDER_PATH }}/test-output.txt | sed -n '3p')
+          spx csr evaluation create --name test_from_train_data_update_${{ env.CURRENT_COMMIT_HASH }} --model1 @my.model.url --model2 @my.model.url --dataset @my.testing.datasets --output url @my.test.result --wait 
+          #speech test create -n test_from_train_data_update_${{ env.CURRENT_COMMIT_HASH }} -a ${{ env.AUDIO_TRANS_TEST_ID }} -m ${{ env.CUSTOM_SPEECH_MODEL_ID }} -lm ${{ env.CUSTOM_SPEECH_MODEL_ID }} --wait > ${{ env.TEST_BUILD_FOLDER_PATH }}/test-output.txt
+          test_id=$(tail -1 my.test.result | tail -c 36)
           if ! [[ ${test_id//-/} =~ ^[[:xdigit:]]{32}$ ]]
           then
             echo "::error ::Failed to test the Custom Speech model. Possibly re-run all jobs."
@@ -330,17 +314,15 @@ jobs:
 
       - name: Delete testing datasets
         run: |
-          speech dataset delete ${{ env.AUDIO_TRANS_TEST_ID }}
+          spx csr dataset delete --foreach ds in @my.testing.datasets
           echo DELETED AUDIO+HUMAN-LABELED TRANSCRIPT TESTING DATA.
 
-      # Get the content from the test and remove the first line, which is
-      # logging, so the result is a JSON file.
+      # Get the content from the test as a JSON file.
       - name: Store JSON test output
         run: |
           test_summary_file_name="test-summary-from-train-data-update-${{ env.CURRENT_COMMIT_HASH }}.json"
           echo "::set-env name=TEST_SUMMARY_FILE::$(echo $test_summary_file_name)"
-          speech test show ${{ env.TEST_ID }} > ${{ env.TEST_BUILD_FOLDER_PATH }}/$test_summary_file_name
-          sed -i '1d' ${{ env.TEST_BUILD_FOLDER_PATH }}/$test_summary_file_name
+          spx csr evaluation status --evaluation @my.test.result --output json ${{ env.TEST_BUILD_FOLDER_PATH }}/$test_summary_file_name
 
       ###########################################################################
       # Archiving test results in blob
@@ -359,8 +341,7 @@ jobs:
 
       - name: Save test results in Azure Blob
         run: |
-          results_url=$(jq '.resultsUrl' ${{ env.TEST_BUILD_FOLDER_PATH }}/${{ env.TEST_SUMMARY_FILE }} | xargs)
-          curl $results_url -o "test-results.txt"
+          cat ${{ env.TEST_BUILD_FOLDER_PATH }}/${{ env.TEST_SUMMARY_FILE }} > test-results.txt
           az storage blob upload --account-name ${{ secrets.STORAGE_ACCOUNT_NAME }} --container-name test-results --name test-results-from-train-data-update-${{ env.CURRENT_COMMIT_HASH }}.txt --file test-results.txt --auth-mode login
 
       # Delete the test. This must be done after the test results file is
@@ -368,7 +349,7 @@ jobs:
       # exists.
       - name: Delete test
         run: |
-          speech test delete ${{ env.TEST_ID }}
+          spx csr evaluation delete --evaluation @my.test.result
           echo DELETED TEST.
 
       ###########################################################################
@@ -384,12 +365,12 @@ jobs:
           az storage blob download --account-name ${{ secrets.STORAGE_ACCOUNT_NAME }} --container-name configuration --name benchmark-test.txt --file previous-benchmark-test.txt --auth-mode login
           benchmark_test_results_name=$(cat previous-benchmark-test.txt)
           az storage blob download --account-name ${{ secrets.STORAGE_ACCOUNT_NAME }} --container-name test-results --name $(echo $benchmark_test_results_name) --file benchmark-test-results.json --auth-mode login
-          jq '.wordErrorRate' benchmark-test-results.json | xargs -I {} echo "::set-env name=BENCHMARK_WER::{}"
+          jq '.properties.wordErrorRate1' benchmark-test-results.json | xargs -I {} echo "::set-env name=BENCHMARK_WER::{}"
 
       # Get NEW_WER from the newly-created test results file.
       - name: Get the new Word Error Rate (WER)
         if: env.BENCHMARK_BLOB_EXISTS == 'true'
-        run: jq '.wordErrorRate' ${{ env.TEST_BUILD_FOLDER_PATH }}/${{ env.TEST_SUMMARY_FILE }} | xargs -I {} echo "::set-env name=NEW_WER::{}"
+        run: jq '.properties.wordErrorRate1' ${{ env.TEST_BUILD_FOLDER_PATH }}/${{ env.TEST_SUMMARY_FILE }} | xargs -I {} echo "::set-env name=NEW_WER::{}"
 
       - name: CONTINUING WORKFLOW - WER improved
         if: env.BENCHMARK_BLOB_EXISTS == 'false' || env.BENCHMARK_WER > env.NEW_WER
@@ -400,7 +381,7 @@ jobs:
       - name: STOPPING WORKFLOW - WER not improved
         if: env.BENCHMARK_WER <= env.NEW_WER
         run: |
-          speech model delete ${{ env.CUSTOM_SPEECH_MODEL_ID }}
+          spx csr model delete --model @my.model.url
           echo DELETED CUSTOM SPEECH MODEL.
           echo "::error ::Failed to improve upon the benchmark Custom Speech model. Submit a pull request with updates to training data to try again."
           exit 1
@@ -454,33 +435,25 @@ jobs:
           echo "::set-env name=SEMANTIC_VERSION::$GitVersion_SemVer"
           echo "::set-env name=TRAIN_BUILD_FOLDER_PATH::build-speech-train"
 
-      # https://github.com/msimecek/Azure-Speech-CLI
-      - name: Install and configure Azure Speech CLI
+      # https://github.com/Azure-Samples/cognitive-services-speech-tools
+      - name: Install and configure SPX
         run: |
-          dotnet tool install -g azurespeechcli --version 1.5.2
-          speech config set -n ${{ secrets.SPEECH_PROJECT_NAME }} -k ${{ secrets.SPEECH_SUBSCRIPTION_KEY }} -r ${{ secrets.SPEECH_RESOURCE_REGION }} -s
+          dotnet tool install -g spx
+          spx config @name --set ${{ secrets.SPEECH_PROJECT_NAME }} 
+          spx config @key --set ${{ secrets.SPEECH_SUBSCRIPTION_KEY }} 
+          spx config @region --set ${{ secrets.SPEECH_RESOURCE_REGION }}
 
-      # Custom Speech models trained with the V2 SDK must be trained with either
-      # a language model or acoustic model. `custom_speech_model_kind` will be
-      # used to filter results from the `speech model list` command to get the
-      # benchmark Speech model. From similar checks in the `setup` job, we know
-      # the repository is properly configured and only have to do minimal
-      # checking here.
-      #
+      # First get a json of all models and save model ids to txt file 
       # Check that the benchmark model has been successfully downloaded with
       # [[${my_variable//-/} =~ ^[[:xdigit:]]{32}$]] which will return true if
       # the variable is a valid GUID with 32 hexadecimal characters.
       - name: Get the benchmark Speech model
         run: |
-          custom_speech_model_kind="Acoustic"
-          if [[ -z "${{ env.TRAIN_ZIP_SOURCE_PATH }}" ]]
-          then
-            custom_speech_model_kind="Language"
-          fi
           mkdir ${{ env.TRAIN_BUILD_FOLDER_PATH }}
-          speech model list > ${{ env.TRAIN_BUILD_FOLDER_PATH }}/speech-model-list.txt
-          sed -i "/$custom_speech_model_kind/!d" ${{ env.TRAIN_BUILD_FOLDER_PATH }}/speech-model-list.txt
-          custom_speech_model_id=$(cat ${{ env.TRAIN_BUILD_FOLDER_PATH }}/speech-model-list.txt | tail -1 | awk '{print $1;}')
+          spx csr model list --models --output json ${{ env.TRAIN_BUILD_FOLDER_PATH }}/speech-model-list.json
+          jq '.values[].self' ${{ env.TRAIN_BUILD_FOLDER_PATH }}/speech-model-list.json | tr -d \" > ${{ env.TRAIN_BUILD_FOLDER_PATH }}/speech-model-list.txt
+          rm ${{ env.TRAIN_BUILD_FOLDER_PATH }}/speech-model-list.json
+          custom_speech_model_id=$(tail -1 ${{ env.TRAIN_BUILD_FOLDER_PATH }}/speech-model-list.txt | tr -d '[:space:]' | tail -c 36)
           if ! [[ ${custom_speech_model_id//-/} =~ ^[[:xdigit:]]{32}$ ]]
           then
             echo "::error ::Failed to get the benchmark Custom Speech model. Possibly re-run all jobs."
@@ -496,9 +469,11 @@ jobs:
           then
             while read -a line
             do
-              if [[ ${line//-/} =~ ^[[:xdigit:]]{32}$ ]]
+              line_url=$(cat line | tr -d '[:space:]')
+              line_id=$(cat line_url | tail -c 36)
+              if [[ ${line_id//-/} =~ ^[[:xdigit:]]{32}$ ]]
               then
-                speech model delete $line
+                spx csr model delete --model $line_url
                 if [[ ${?} -gt 0 ]]
                 then
                   echo "::warning::Bad deletion request detected, likely scenario a model is still attached to an endpoint"
@@ -518,8 +493,9 @@ jobs:
       # the variable is a valid GUID with 32 hexadecimal characters.
       - name: Create Release Asset
         run: |
-          speech endpoint create -n endpoint_${{ env.CURRENT_COMMIT_HASH }} -l ${{ env.SPEECH_LOCALE }} -m ${{ env.CUSTOM_SPEECH_MODEL_ID }} -lm ${{ env.CUSTOM_SPEECH_MODEL_ID }} --wait > ${{ env.TRAIN_BUILD_FOLDER_PATH }}/endpoint-output.txt
-          endpoint_id=$(cat ${{ env.TRAIN_BUILD_FOLDER_PATH }}/endpoint-output.txt | sed -n '3p')
+          spx csr endpoint create --name endpoint_${{ env.CURRENT_COMMIT_HASH }} --language ${{ env.SPEECH_LOCALE }} --model @my.model.url --output url @my.endpoint.url --wait
+          #speech endpoint create -n endpoint_${{ env.CURRENT_COMMIT_HASH }} -l ${{ env.SPEECH_LOCALE }} -m ${{ env.CUSTOM_SPEECH_MODEL_ID }} -lm ${{ env.CUSTOM_SPEECH_MODEL_ID }} --wait > ${{ env.TRAIN_BUILD_FOLDER_PATH }}/endpoint-output.txt
+          endpoint_id=$(cat my.endpoint.url | tail -c 36)
           if ! [[ ${endpoint_id//-/} =~ ^[[:xdigit:]]{32}$ ]]
           then
             echo "::error ::Failed to create an endpoint. Possibly re-run all jobs."
