--- a/.github/workflows/speech-test-data-ci.yml
+++ b/.github/workflows/speech-test-data-ci.yml
@@ -33,7 +33,7 @@ env:
   CUSTOM_SPEECH_MODEL_KIND: "Language"
   # See Language Support for available locales:
   # https://docs.microsoft.com/en-us/azure/cognitive-services/speech-service/language-support
-  SPEECH_LOCALE: "en-us"
+  SPEECH_LOCALE: "en-US"
   #############################################################################
   # Testing Data
   #############################################################################
@@ -70,7 +70,6 @@ jobs:
             az storage container create --account-name ${{ secrets.STORAGE_ACCOUNT_NAME }} --name test-results --auth-mode login
             echo CREATED TEST-RESULTS CONTAINER.
           fi
-
       - name: Create the configuration container if it does not exist
         run: |
           config_container_exists=$(az storage container exists --account-name ${{ secrets.STORAGE_ACCOUNT_NAME }} --name configuration --auth-mode login | jq '.exists')
@@ -79,7 +78,6 @@ jobs:
             az storage container create --account-name ${{ secrets.STORAGE_ACCOUNT_NAME }} --name configuration --public-access blob --auth-mode login
             echo CREATED CONFIGURATION CONTAINER.
           fi
-
   #############################################################################
   #
   #   Continuous Integration - handle updates to testing data.
@@ -124,7 +122,6 @@ jobs:
             echo "HYPHEN_EVENT_NAME=test-data-update" >> $GITHUB_ENV
             echo "UNDERSCORE_EVENT_NAME=test_data_update" >> $GITHUB_ENV
           fi
-
       # https://github.com/Azure-Samples/cognitive-services-speech-tools
       - name: Install and configure SPX
         run: |
@@ -132,7 +129,6 @@ jobs:
           spx config @name --set ${{ secrets.SPEECH_PROJECT_NAME }} 
           spx config @key --set ${{ secrets.SPEECH_SUBSCRIPTION_KEY }} 
           spx config @region --set ${{ secrets.SPEECH_RESOURCE_REGION }}
-
       #########################################################################
       # Test the Custom Speech model.
       #########################################################################
@@ -144,9 +140,9 @@ jobs:
       # [[${my_variable//-/} =~ ^[[:xdigit:]]{32}$]] which will return true if
       # the variable is a valid GUID with 32 hexadecimal characters.
       - name: Upload audio and human transcript testing data
-        if: TEST_ZIP_SOURCE_PATH && TEST_ZIP_SOURCE_PATH != ''
+        if: ${{ env.TEST_ZIP_SOURCE_PATH && env.TEST_ZIP_SOURCE_PATH != '' }}
         run: |
-          spx csr dataset upload --data ${{ TEST_ZIP_SOURCE_PATH }} --kind Acoustic --name "AM" --output url @my.testing.datasets --wait
+          spx csr dataset upload --data $TEST_ZIP_SOURCE_PATH --kind Acoustic --name "AM" --output url @my.testing.datasets --wait
           audio_trans_test_id=$(cat my.testing.datasets | tail -c 36)
           if ! [[ ${audio_trans_test_id//-/} =~ ^[[:xdigit:]]{32}$ ]]
           then
@@ -154,7 +150,6 @@ jobs:
             exit 1
           fi
           echo "AUDIO_TRANS_TEST_ID=$(echo $audio_trans_test_id)" >> $GITHUB_ENV
-
       # If a benchmark model exists, it will be tested later in the workflow.
       #
       # Check that the benchmark model has been successfully downloaded with
@@ -163,7 +158,7 @@ jobs:
       - name: Get the benchmark model
         run: |
           spx csr model list --models --output url @my.test.model.url
-          custom_speech_model_id=$(tail -1 my.test.model.url tail -c 36)
+          custom_speech_model_id=$(tail -1 my.test.model.url | tail -c 36)
           if [[ ${custom_speech_model_id//-/} =~ ^[[:xdigit:]]{32}$ ]]
           then
             echo IF THIS IS NOT A BASELINE TEST, TEST THE BENCHMARK CUSTOM SPEECH MODEL WITH GUID: $custom_speech_model_id
@@ -173,7 +168,6 @@ jobs:
             echo "INITIAL_MODEL_EXISTS=false" >> $GITHUB_ENV
             echo "IS_BASELINE_TEST=true" >> $GITHUB_ENV
           fi
-
       # If a benchmark model does not exist, or if a user pushed a tag beginning
       # with `BASELINE`, get the latest baseline model.
       #
@@ -181,10 +175,10 @@ jobs:
       # [[${my_variable//-/} =~ ^[[:xdigit:]]{32}$]] which will return true if
       # the variable is a valid GUID with 32 hexadecimal characters.
       - name: Get the baseline model
-        if: IS_BASELINE_TEST == 'true'
+        if: ${{ env.IS_BASELINE_TEST == 'true' }}
         run: |
           spx csr model list --base --models --output json baseline_models.json
-          jq --arg SPEECH_LOCALE "$SPEECH_LOCALE" '.values[] | select(.locale==$SPEECH_LOCALE).self' baseline_models.json | tr -d \" > baseline_models.txt
+          jq --arg LOC "$SPEECH_LOCALE" '.values[]|select(.locale==$LOC).self' baseline_models.json | tr -d \" > baseline_models.txt
           rm baseline_models.json
           tail -1 baseline_models.txt | tr -d '[:space:]' > my.test.model.url
           baseline_model_id=$(cat my.test.model.url | tail -c 36)
@@ -195,7 +189,6 @@ jobs:
           fi
           echo TEST THE LATEST BASELINE MODEL WITH GUID: $baseline_model_id
           echo "MODEL_ID=$(echo $baseline_model_id)" >> $GITHUB_ENV
-
       # Test with Speech.
       #
       # Check that the test has been successfully created with
@@ -203,7 +196,7 @@ jobs:
       # the variable is a valid GUID with 32 hexadecimal characters.
       - name: Test the benchmark or baseline model
         run: |
-          spx csr evaluation create --name test_from_${{ UNDERSCORE_EVENT_NAME }}_${{ EVENT_ID }} --model1 @my.test.model.url --model2 @my.test.model.url --dataset @my.testing.datasets --output url @my.test.result --wait 
+          spx csr evaluation create --name test_from_${UNDERSCORE_EVENT_NAME}_${EVENT_ID} --model1 @my.test.model.url --model2 @my.test.model.url --dataset @my.testing.datasets --output url @my.test.result --wait 
           test_id=$(tail -1 my.test.result | tail -c 36)
           if ! [[ ${test_id//-/} =~ ^[[:xdigit:]]{32}$ ]]
           then
@@ -211,20 +204,15 @@ jobs:
             exit 1
           fi
           echo "TEST_ID=$(echo $test_id)" >> $GITHUB_ENV
-
       - name: Delete testing datasets
         run: |
-          spx csr dataset delete --foreach ds in @my.testing.datasets
+          spx csr dataset delete --dataset @my.testing.datasets
           echo DELETED AUDIO+HUMAN-LABELED TRANSCRIPT TESTING DATA.
-
       # Get the content from the test and remove the first line, which is
       # logging, so the result is a JSON file.
       - name: Store JSON test output
         run: |
-          test_summary_file_name="test-summary-from-${{ HYPHEN_EVENT_NAME }}-${{ EVENT_ID }}.json"
-          echo "TEST_SUMMARY_FILE=$(echo $test_summary_file_name)" >> $GITHUB_ENV
-          spx csr evaluation status --evaluation @my.test.result --output json ${{ TEST_BUILD_FOLDER_PATH }}/$test_summary_file_name
-
+          spx csr evaluation status --evaluation @my.test.result --output json ${TEST_BUILD_FOLDER_PATH}/test_json_${HYPHEN_EVENT_NAME}_${EVENT_ID}
       #########################################################################
       # Archive test summary and test results in Blob
       #########################################################################
@@ -238,13 +226,12 @@ jobs:
       - name: Save test summary in Azure Blob
         uses: azure/CLI@v1
         with:
-          inlineScript: az storage blob upload --account-name ${{ secrets.STORAGE_ACCOUNT_NAME }} --container-name test-results --name ${{ TEST_SUMMARY_FILE }} --file ${{ TEST_BUILD_FOLDER_PATH }}/${{ TEST_SUMMARY_FILE }} --auth-mode login
+          inlineScript: az storage blob upload --account-name ${{ secrets.STORAGE_ACCOUNT_NAME }} --container-name test-results --name test_json_${HYPHEN_EVENT_NAME}_${EVENT_ID} --file ${TEST_BUILD_FOLDER_PATH}/test_json_${HYPHEN_EVENT_NAME}_${EVENT_ID} --auth-mode login
 
       - name: Save test results in Azure Blob
         run: |
-          cat ${{ TEST_BUILD_FOLDER_PATH }}/${{ TEST_SUMMARY_FILE }} > test-results.txt
-          az storage blob upload --account-name ${{ secrets.STORAGE_ACCOUNT_NAME }} --container-name test-results --name test-results-from-${{ HYPHEN_EVENT_NAME }}-${{ EVENT_ID }}.txt --file test-results.txt --auth-mode login
-
+          cat ${TEST_BUILD_FOLDER_PATH}/test_json_${HYPHEN_EVENT_NAME}_${EVENT_ID} > test-results.txt
+          az storage blob upload --account-name ${{ secrets.STORAGE_ACCOUNT_NAME }} --container-name test-results --name test-results-from-${HYPHEN_EVENT_NAME}-${EVENT_ID}.txt --file test-results.txt --auth-mode login
       # Delete the test. This must be done after the test results file is
       # generated, as the resultsUrl will only be available while the test
       # exists.
@@ -252,7 +239,6 @@ jobs:
         run: |
           spx csr evaluation delete --evaluation @my.test.result
           echo DELETED TEST.
-
       - name: Verify the configuration file exists
         run: az storage blob exists --account-name ${{ secrets.STORAGE_ACCOUNT_NAME }} --container-name configuration --name benchmark-test.txt --auth-mode login | jq '.exists' | xargs -I {} echo "BENCHMARK_BLOB_EXISTS={}" >> $GITHUB_ENV
 
@@ -264,7 +250,7 @@ jobs:
       # workflow triggered as the results of a test data update, upload the test
       # summary from the current run of the workflow.
       - name: Update benchmark in configuration file
-        if: IS_BASELINE_TEST != 'true' || BENCHMARK_BLOB_EXISTS == 'false' || INITIAL_MODEL_EXISTS == 'false'
+        if: ${{ env.IS_BASELINE_TEST != 'true' || env.BENCHMARK_BLOB_EXISTS == 'false' || env.INITIAL_MODEL_EXISTS == 'false' }}
         run: |
-          echo ${{ TEST_SUMMARY_FILE }} > ${{ TEST_BUILD_FOLDER_PATH }}/benchmark-test.txt
-          az storage blob upload --account-name ${{ secrets.STORAGE_ACCOUNT_NAME }} --container-name configuration --name benchmark-test.txt --file ${{ TEST_BUILD_FOLDER_PATH }}/benchmark-test.txt --auth-mode login
+          echo test_json_${HYPHEN_EVENT_NAME}_${EVENT_ID} > ${TEST_BUILD_FOLDER_PATH}/benchmark-test.txt
+          az storage blob upload --account-name ${{ secrets.STORAGE_ACCOUNT_NAME }} --container-name configuration --name benchmark-test.txt --file ${TEST_BUILD_FOLDER_PATH}/benchmark-test.txt --auth-mode login
