--- a/.github/workflows/speech-train-data-ci-cd.yml
+++ b/.github/workflows/speech-train-data-ci-cd.yml
@@ -259,8 +259,26 @@ jobs:
       # the variable is a valid GUID with 32 hexadecimal characters.
       - name: Delete training datasets
         run: |
-          spx csr dataset delete --foreach ds in @my.training.datasets
-          rm my.training.datasets
+          datasets_file=my.training.datasets
+          number_of_datasets_to_delete=$( wc -l < "$datasets_file" )
+          if [[ $number_of_datasets_to_delete -gt 0 ]]
+          then
+            while read -a line
+            do
+              line_url=$(cat line | tr -d '[:space:]')
+              line_id=$(cat line_url | tail -c 36)
+              if [[ ${line_id//-/} =~ ^[[:xdigit:]]{32}$ ]]
+              then
+                spx csr dataset delete --dataset $line_url
+                if [[ ${?} -gt 0 ]]
+                then
+                  echo "::warning::Bad deletion request detected"
+                else
+                  echo DELETED DATASET WITH GUID: "$line"
+                fi
+              fi
+            done < "$datasets_file" | head -$number_of_datasets_to_delete
+          fi
           echo DELETED TRAINING DATASETS.
 
       #########################################################################
@@ -365,7 +383,7 @@ jobs:
       # Get NEW_WER from the newly-created test results file.
       - name: Get the new Word Error Rate (WER)
         if: ${{ env.BENCHMARK_BLOB_EXISTS == 'true' }}
-        run: jq '.properties.wordErrorRate1' ${{ TEST_BUILD_FOLDER_PATH }}/${{ TEST_SUMMARY_FILE }} | xargs -I {} echo "NEW_WER={}" >> $GITHUB_ENV
+        run: jq '.properties.wordErrorRate1' ${{ env.TEST_BUILD_FOLDER_PATH }}/${{ env.TEST_SUMMARY_FILE }} | xargs -I {} echo "NEW_WER={}" >> $GITHUB_ENV
 
       - name: CONTINUING WORKFLOW - WER improved
         if: ${{ env.BENCHMARK_BLOB_EXISTS == 'false' || env.BENCHMARK_WER > env.NEW_WER }}
